force-app/main/default/objects/Account/fields/Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Contact Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>