force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Recieves email for account</description>
    <inlineHelpText>Please enter your email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>