force-app/main/default/objects/Account/fields/Risk_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Calculation__c</fullName>
    <description>Determines risk</description>
    <label>Risk Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>