force-app/main/default/objects/Account/fields/RUS__c.field-meta.xml
<CustomField>
    <fullName>RUS__c</fullName>
    <label>RUS</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>