force-app/main/default/objects/Account/fields/ToOpp__c.field-meta.xml
<CustomField>
    <fullName>ToOpp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ToOpp</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>