force-app/main/default/objects/Account/fields/TotalRisk__c.field-meta.xml
<CustomField>
    <fullName>TotalRisk__c</fullName>
    <label>TotalRisk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low risk</fullName>
            </value>
            <value>
                <fullName>Medium risk</fullName>
            </value>
            <value>
                <fullName>high risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>